Fixed top scroll z-index

--- a/static/css/common.css
+++ b/static/css/common.css
@@ -251,6 +251,7 @@ html{
     bottom: 20px;
     right: 20px;
     font-size: 14px;
+    z-index:11110;
 }
 
 .scroll-top-link {
